--- a/html1/index.html
+++ b/html1/index.html
@@ -42,20 +42,60 @@
                     consequatur accusantium eligendi eius, voluptas neque quis itaque maiores dolorem delectus libero?
                     Perferendis minima voluptatibus aliquid?</p>
             </div>
+        </div><br>
+        <div>
+            <table>
+                    <tr>
+                      <th>Pirmais</th>
+                      <th>Otrais</th>
+                    </tr>
+                    <tr>
+                      <td>1</td>
+                      <td>2</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>4</td>
+                    </tr>
+            </table><br>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d69616.05546547634!2d24.1106944!3d56.957337599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1slv!2slv!4v1690734133712!5m2!1slv!2slv"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
         <!-- Exercises -->
         <div id="exercises">
             <h1>Uzdevumi</h1><br>
-            <p>Nomaini visiem tekstiem fontu.</p>
-            <p>Sakārto bilžu un tekstu novietojumu.</p>
-            <p>Pieliec tekstu zem virsrakstiem.</p>
-            <p>Pārtaisi uzdevumu sadaļu, izmantojot HTML atbilstošu tagu, lai izveidotu sarakstu.</p>
-            <p>Pieliec stilu header daļai, lai tā atgādinātu header.</p>
-            <p>Pieliec stilu footer daļai, lai teksts būtu centrā un elements izskatītos pēc footer.</p>
-            <p>Augšējo bildi formatē tā, lai tiktu aizņemts viss ekrāna platums.</p>
-            <p>Pievieno karti.</p>
-            <p>Pievieno tabulu, kurai būtu vismaz 2 kolonnas un 3 rindas.</p>
+            <ul>
+                <li>
+                    <p>Nomaini visiem tekstiem fontu.</p>
+                </li>
+                <li></li>
+                <p>Sakārto bilžu un tekstu novietojumu.</p>
+                </li>
+                <li>
+                    <p>Pieliec tekstu zem virsrakstiem.</p>
+                </li>
+                <li>
+                    <p>Pārtaisi uzdevumu sadaļu, izmantojot HTML atbilstošu tagu, lai izveidotu sarakstu.</p>
+                </li>
+                <li>
+                    <p>Pieliec stilu header daļai, lai tā atgādinātu header.</p>
+                </li>
+                <li>
+                    <p>Pieliec stilu footer daļai, lai teksts būtu centrā un elements izskatītos pēc footer.</p>
+                </li>
+                <li>
+                    <p>Augšējo bildi formatē tā, lai tiktu aizņemts viss ekrāna platums.</p>
+                </li>
+                <li>
+                    <p>Pievieno karti.</p>
+                </li>
+                <li>
+                    <p>Pievieno tabulu, kurai būtu vismaz 2 kolonnas un 3 rindas.</p>
+                </li>
+            </ul>
         </div>
 
         <!-- Footer -->
