--- a/html1/index.html
+++ b/html1/index.html
@@ -2,116 +2,107 @@
 <html lang="en">
 
 <head>
-    <title>HTML&CSS</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="resources/style.css">
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Bootstrap form</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function validateForm() {
+      const form = document.getElementById('survey');
+      form.classList.add('was-validated');
+    }
+  </script>
 </head>
 
 <body>
+  <div class="container my-5">
+    <h1 class="d-flex justify-content-center">Anketa</h1>
+    <form class="row g-3" id="survey">
+      <div class="row border p-3 my-3">
+        <label class="form-label" for="name">Vārds</label>
+        <input type="text" class="form-control" id="name" placeholder="Vārds" required>
+        <!-- Epasts-->
+      </div>
 
-    <!-- Header -->
-    <header>
-        <a href="#pavasaris">Šeit ir virsraksts, kurš paliek galvenes daļā.</a>
-        <div>
-            <a href="#vasara">Vasara</a>
-            <a href="#plava">Uzdevumi</a>
-        </div>
-    </header>
+      <div class="row border p-3 my-3">
+        <label for="feelings">Cik priecīgs tu šodien jūties?</label>
+        <input type="range" class="form-control-range" id="feelings">
+      </div>
 
-    <main id="pavasaris">
-        <img class="viss-ekrans" src="resources/Pavasaris.jpg" alt="Pavasaris">
-        <div class="d-flex-f-d-row">
-            <img src="resources/Pavasaris.jpg" class="w-50" alt="Pavasaris">
-            <div>
-                <h1>Pavasaris</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa et voluptatem nostrum facilis
-                    delectus
-                    voluptatum accusantium deserunt dolorum esse ea. Vel, ipsum! Veritatis ab quod dolorum iure
-                    asperiores
-                    doloribus expedita?</p>
-            </div>
-        </div>
-        <div id="vasara" class="d-flex-f-d-row-reverse">
-            <img class="w-50" src="resources/Vasara.jpg" alt="Vasara">
-            <div class="w-50">
-                <h1>Šeit ir apraksts, kuram ir jāatrodas bildei kreisajā pusē.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum culpa quae mollitia eveniet
-                    minima
-                    adipisci error enim eius vel nostrum veritatis repellat, facere autem ad. Fuga repellat odit itaque
-                    quibusdam.</p>
-            </div><br>
-        </div>
+      <div class=" row border p-3 my-3">
+        <div class="row gy-2">
+          <h3>Informācija par tavu dzīvesvietu</h3>
+          <label for="street">Ielas nosaukums</label>
+          <input type="text" class="form-control" id="street" placeholder="Rīgas iela" required="">
 
-        <div id="plava" class="d-flex-f-d-row">
-            <img class="w-50" src="resources/Plava.jpg" alt="Plava">
-            <div class="w-50">
-                <h1>Šeit apraksts, kuram ir jāatrodas bildes labajā pusē.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum illum consequuntur hic tempora amet
-                    consequatur accusantium eligendi eius, voluptas neque quis itaque maiores dolorem delectus libero?
-                    Perferendis minima voluptatibus aliquid?</p>
-            </div>
-        </div><br>
-        <div>
-            <table>
-                <tr>
-                    <th>Pirmais</th>
-                    <th>Otrais</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>4</td>
-                </tr>
-            </table><br>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d69616.05546547634!2d24.1106944!3d56.957337599999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1slv!2slv!4v1690734133712!5m2!1slv!2slv"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+          <label for="houseNumber">Mājas, dzīvokļa numurs</label>
+          <input type="text" class="form-control" id="houseNumber" placeholder="42-15" required>
 
-        <!-- Exercises -->
-        <div id="exercises">
-            <h1>Uzdevumi</h1><br>
-            <ul>
-                <li>
-                    <p>Nomaini visiem tekstiem fontu.</p>
-                </li>
-                <li>
-                    <p>Sakārto bilžu un tekstu novietojumu.</p>
-                </li>
-                <li>
-                    <p>Pieliec tekstu zem virsrakstiem.</p>
-                </li>
-                <li>
-                    <p>Pārtaisi uzdevumu sadaļu, izmantojot HTML atbilstošu tagu, lai izveidotu sarakstu.</p>
-                </li>
-                <li>
-                    <p>Pieliec stilu header daļai, lai tā atgādinātu header.</p>
-                </li>
-                <li>
-                    <p>Pieliec stilu footer daļai, lai teksts būtu centrā un elements izskatītos pēc footer.</p>
-                </li>
-                <li>
-                    <p>Augšējo bildi formatē tā, lai tiktu aizņemts viss ekrāna platums.</p>
-                </li>
-                <li>
-                    <p>Pievieno karti.</p>
-                </li>
-                <li>
-                    <p>Pievieno tabulu, kurai būtu vismaz 2 kolonnas un 3 rindas.</p>
-                </li>
-            </ul>
+          <label for="city">Pilsēta</label>
+          <input type="text" class="form-control" id="city" placeholder="Rīga" required>
+
+          <label for="country">Valsts</label>
+          <select id="country" class="form-control" required>
+            <option value="" disabled selected>Izvēlies valsti</option>
+            <option>Latvija</option>
+            <option>Vācija</option>
+            <option>Zviedrija</option>
+          </select>
+
+
+          <label for="inputZip">Pasta indekss</label>
+          <div class="input-group" style="padding:0%">
+            <span class="input-group-text">LV-</span>
+            <input type="text" class="form-control" pattern="[0-9]{4}" id="inputZip" required>
+          </div>
+
         </div>
-    </main>
-    <!-- Footer -->
-    <footer>
-        <p>Šeit ir tukšs footers</p>
-        <p>Šeit ir tukšs footers vēlreiz</p>
-    </footer>
+      </div>
+
+      <div class="row border p-3 my-3">
+        <h3>Sadaļa par tevi un tavām interesēm</h3>
+        <h6>Uzdevums</h6>
+        <ol>
+          <li>Pievieno sadaļu, lai varētu pievienot savu epastu. Input laukā parādi e-pasta piemēru.</li>
+          <li>Pievieno sadaļu, lai varētu pievienot savu foto.</li>
+          <li>Pievienot sadaļu, lai varētu atzīmēt vai persona dod priekšroku vaniļas vai šokolādes saldējuma (radio).</li>
+          <li>Pievienot sadaļu, lai varētu atzīmēt visus veikalus, kuros ikdienā iepērkas (checkbox).</li>
+        </ol>
+      </div>
+
+      <div class="row border p-3 my-3">
+        <label for="inputPassword1">Ievadi parole, ja vēlies piekļūt anketas rezultātiem vēlāk</label>
+        <input type="password" class="form-control" id="inputPassword1" placeholder="Password">
+        <label for="inputPassword2">Atkārtoti ievadi paroli</label>
+        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+      </div>
+
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+        <label class="form-check-label" for="flexCheckChecked">
+          Atzīmē, ja vēlies saņemt papildus jautājumus.
+        </label>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary d-flex justify-content-center"
+          onclick="validateForm()">Submit</button>
+      </div>
+
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+          <li>Action</li>
+          <li>Another action</li>
+          <li>Something else here</li>
+        </ul>
+      </div>
+
+    </form>
+  </div>
 
 </body>
 
